feat(198672): pm 104 add virtual storage on ingest + improve plugin lifecycle and metadata
wip


wip


wip


review sql


last improvement